<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.emili.friendbox.ui.mainActivity.PersonalSignUpInformationFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/parentPanel">

        <LinearLayout
            android:layout_marginTop="170dp"
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/firstNameEdit"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/writeYourFirstName"
                style="@style/EditSignUp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/lastNameEdit"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/writeYourLastName"
                    style="@style/EditSignUp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_below="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/adressEdit"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/writeYourAdress"
                    style="@style/EditSignUp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/postalCodeEdit"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/writeYourPostalCode"
                    style="@style/EditSignUp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_below="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/numberEdit"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/writeYourNumber"
                    style="@style/EditSignUp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/profilRadioGroup"
                    android:paddingLeft="50dp"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/handicapProfilRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/disabledPeople"/>

                    <RadioButton
                        android:id="@+id/normalProfilRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/otherPeople"/>
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear4"
            android:layout_below="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valideSignUp"
                />
        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linear4"
            >

            <Button
                android:id="@+id/signInActivityButton"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/haveAccount"
                />
        </android.support.constraint.ConstraintLayout>

    </RelativeLayout>

</FrameLayout>
