<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.emili.friendbox.ui.mainActivity.GeneralSignUpReservalFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/parentPanel">

        <LinearLayout
            android:layout_marginTop="170dp"
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
           <EditText
               android:id="@+id/email"
               android:gravity="center"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textEmailAddress"
               android:hint="@string/writeYourEmail"
               style="@style/EditSignUp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_below="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/password"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/writeYourPassword"
                style="@style/EditSignUp"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear3"
            android:layout_below="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/validePassword"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/valideYourPassword"
                style="@style/EditSignUp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear4"
            android:layout_below="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/nextFormButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"
                />
        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linear3"
            >

            <Button
                android:id="@+id/signInActivityButton"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/haveAccount"
                />
        </android.support.constraint.ConstraintLayout>

    </RelativeLayout>
</FrameLayout>
