<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.emili.friendbox.ui.mainActivity.SignInFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/parentPanel">

        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="170dp"
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:background="@color/colorGrey"
                android:id="@+id/emailEdit"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:hint="@string/writeYourEmail"
                style="@style/EditSignUp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_below="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/passwordEdit"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/writeYourPassword"
                style="@style/EditSignUp"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear3"
            android:layout_below="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signIn"
                />
        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linear3"
            >

            <Button
                android:id="@+id/signUpActivityButton"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notHaveAccount"
                />
        </android.support.constraint.ConstraintLayout>

    </RelativeLayout>
</FrameLayout>
