<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.emili.friendbox.ui.homeActivity.GestionFragment">

<RelativeLayout
    android:background="#eee"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linear1"
        android:background="@drawable/gestion_layout_border"
        android:layout_width="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content">
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_call"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myProfil"
                android:textSize="23sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="10dp"
                android:layout_height="50dp"
                android:background="@drawable/right_array"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_below="@id/linear1"
        android:layout_marginBottom="40dp"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/linkTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myLink"
            android:textSize="23sp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_below="@id/linear2"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theGPS"
            android:textSize="23sp"
            />
    </LinearLayout>



</RelativeLayout>

</FrameLayout>




